# vsi_smartmoney

./: build.sh  main.py  manage.py  pyproject.toml  render.yaml  requirements.txt
acounts/: forms.py  urls.py  views.py
smartmoney/: apps.py  forms.py  models.py  urls.py  views.py
smartmoney/migrations/: 0001_initial.py  0002_remove_category_user.py  0003_category_is_archived_alter_transaction_category.py  0004_rename_is_archived_category_archived_category_user.py
static/css/: base.css  elements.css  fonts.css  forms.css  navbar.css  variables.css
staticfiles/css/: fonts.css  navbar.css  variables.css
templates/apps/acounts/: forms.html
templates/apps/smartmoney/: categories.html  dashboard.html  forms.html  transactions.html
templates/page/: base.html  navbar.html
vsi/: asgi.py  settings.py  urls.py  wsgi.py
