[project]
name = "vsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-environ>=0.12.0",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.11",
    "whitenoise[brotli]>=6.11.0",
]
